# fluvio-client-java

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  settings.gradle
.github/: dependabot.yml
.github/workflows/: ci.yml  cloud.yml  do_release.yml  docs.yml  publish.yml  push_snapshots.yml
config/checkstyle/: checkstyle-8.37.xml  checkstyle-suppressions.xml
docs/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-tree.html  type-search-index.js
docs/com/infinyon/fluvio/: Fluvio.html  FluvioError.html  Offset.html  PartitionConsumer.html  PartitionConsumerStream.html  Record.html  TopicProducer.html  package-summary.html  package-tree.html
docs/javadoc/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  index-all.html  package-search-index.js  type-search-index.js
docs/javadoc/com/infinyon/fluvio/: Fluvio.html  FluvioError.html  Offset.html  PartitionConsumer.html  Record.html  package-summary.html
examples/: .gitignore  Makefile  Simple.java  build.gradle.kts
examples/src/main/java/com/fluvio/example/: Simple.java
fluvio/: build.gradle
fluvio/src/main/java/com/infinyon/fluvio/: .gitignore  NativeUtils.java
fluvio/src/test/java/com/infinyon/fluvio/: FluvioTest.java
lib/: build.gradle
lib/src/main/java/com/infinyon/fluvio/: Library.java  SharedLibraryLoader.java
lib/src/main/java/fluvio/client/java/: Library.java
lib/src/test/java/com/infinyon/fluvio/: FluvioTest.java  LibraryTest.java
lib/src/test/java/fluvio/client/java/: FluvioTest.java  LibraryTest.java
src/: java_glue.rs.in
