[package]
name = "fluvio-java"
version = "0.10.1"
edition = "2018"
authors = ["Fluvio Contributors <team@fluvio.io>"]
resolver = "2"

[lib]
crate-type = ["cdylib"]
name = "fluvio_java"

[build-dependencies]
flapigen = "0.8.0"
env_logger = "^0.11"
bindgen = { version = "0.71.1", default-features = false, features = ["logging", "runtime", "which-rustfmt"] }

[dependencies]
log = "^0.4.22"
fluvio = { features = ["admin"], git = "https://github.com/infinyon/fluvio.git", tag = "v0.14.0" }
fluvio-future = { version = "0.7.0", features = ["task", "io"] }
anyhow = "1.0.94"
